# tauri-app

./: AGENTS.md  package.json  pnpm-lock.yaml  rustfmt.toml  splashscreen.html  vitest.config.ts
.github/workflows/: build-windows.yml  build.yml
src/: App.css  App.tsx  global.css  main.tsx  setupTests.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_client.rs  init_app.rs  lib.rs  llm.rs  ocr.rs  splashscreen.rs  state.rs  store.rs
src-tauri/src/commands/: clipboard.rs  clipping.rs  fs.rs  llm.rs  mod.rs  ocr.rs  shortcut.rs  tts.rs  window.rs
src-tauri/src/ocr/: capture_screen.rs  detect_text.rs  macos.rs  utils.rs  windows.rs
src-tauri/src/ocr/macos/: capture.rs  detect.rs  tray_fix.rs
src/components/: BlobLoader.css  BlobLoader.tsx  ScreenShotSelector.tsx
src/lib/: commands.ts  platform.ts  prompt.ts  settings.ts
src/pages/: ClipPage.tsx  LlmResultPage.test.tsx  LlmResultPage.tsx  MainPage.tsx  MaskPage.tsx  OcrPage.tsx  SettingsPage.tsx  SplashScreen.tsx
src/types/: clip.ts
