[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["time"] }
block2 = "0.6.1"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-core-foundation = { version = "0.3.1", features = ["CFCGTypes"] }
objc2-core-graphics = "0.3.1"
objc2-foundation = { version = "0.3.1", features = ["NSString", "NSArray"] }
objc2-screen-capture-kit = "0.3.1"
objc2-vision = "0.3.1"
dispatch2 = "0.3.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
